--- a/BankApplications/pom.xml
+++ b/BankApplications/pom.xml
@@ -53,7 +53,7 @@
     		<version>2.5.2</version>
 		</dependency>
 	</dependencies>
-
+	<!--Added dummy comment -->
 	<build>
 		<plugins>
 			<plugin>
